--- a/fundamentales-3/index.html
+++ b/fundamentales-3/index.html
@@ -7,14 +7,14 @@
 
     <title>Title's page</title>
 
-    <!-- # Importar Javascript # -->
-    <script src="bucles-2.js"></script>
     <style>
         body {
             background: #282828;
             color: wheat;
         }
     </style>
+    <!-- # Importar Javascript # -->
+    <script src="index.js"></script>
 
 </head>
 
