Adición carpeta de configuración del editor (vscode)

--- a/configuracion/index.html
+++ b/configuracion/index.html
@@ -7,19 +7,14 @@
 
     <title>Title's page</title>
 
-    <style>
-        body {
-            background: #282828;
-            color: wheat;
-        }
-    </style>
-    <script defer src="scripts.js"></script>
+    <!-- # Importar Javascript # -->
+    <script defer src="src/index.js"></script>
 
 </head>
 
 <body>
 
-    <h1>¡Bienvenido!</h1>
+    <h1>¡Hola Mundo!</h1>
 
 </body>
 
